# no_corners

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.bak.md  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Biosample/: index.html
BiosampleCollection/: index.html
NamedThing/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
age_in_years/: index.html
birth_date/: index.html
description/: index.html
entries/: index.html
examples/: README.md
id/: index.html
name/: index.html
no_corners/: index.html
primary_email/: index.html
project/excel/: no_corners.xlsx
project/graphql/: no_corners.graphql
project/jsonld/: no_corners.context.jsonld  no_corners.jsonld
project/jsonschema/: no_corners.schema.json
project/owl/: no_corners.owl.ttl
project/prefixmap/: no_corners.yaml
project/protobuf/: no_corners.proto
project/shacl/: no_corners.shacl.ttl
project/shex/: no_corners.shex
project/sqlschema/: no_corners.sql
search/: search_index.json
src/data/examples/: BiosampleCollection.yaml
src/docs/: about.md
src/no_corners/datamodel/: __init__.py  no_corners.py
src/no_corners/schema/: no_corners.yaml
tests/: __init__.py  test_data.py
types/: index.html
vital_status/: index.html
well_pos/: index.html
