[tool.poetry]
name = "no_corners"
version = "0.1.0"
description = "Testing a reqular expression for 96-well plates, where the corner wells must not be filled with a test sample"
authors = ["Mark Andrew Miller <mam@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/no_corners/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
cruft = "^2.11.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]